fix: overflow issue when metadata modal contents exceed absolute height

--- a/src/frontend/item-page/metadata-modal.module.css
+++ b/src/frontend/item-page/metadata-modal.module.css
@@ -13,6 +13,7 @@
   border-radius: 3px;
   display: flex;
   flex-direction: column;
+  overflow: auto;
   /* animation: move 1s linear 1s 1; */
 }
 
